test_case/rust-lang_rust/53324_413015983_10.rs
compile_fail,E0411\n<Self>::foo; // error: use of `Self` outside of an impl, trait, or type\n             // definition\n